[gd_scene load_steps=48 format=3 uid="uid://j6hicahygtp"]

[ext_resource type="Script" path="res://scenes/tutorial.gd" id="1_oa3ri"]
[ext_resource type="Texture2D" uid="uid://dajex7cpt7k4p" path="res://assets/images/bg/background.png" id="1_r6irf"]
[ext_resource type="Texture2D" uid="uid://d3d3t8abbtv8h" path="res://assets/images/ui/storage.png" id="3_4fseq"]
[ext_resource type="Texture2D" uid="uid://hfcstjcjosw4" path="res://assets/images/ui/vlcmediaplayer.png" id="3_kijts"]
[ext_resource type="Texture2D" uid="uid://b8y35swxyqxen" path="res://assets/images/bg/fade.png" id="3_sor34"]
[ext_resource type="Texture2D" uid="uid://dv1knrxoff866" path="res://assets/images/ui/transitions/bg.png" id="4_f6wap"]
[ext_resource type="Texture2D" uid="uid://c3rsesgxto2nt" path="res://assets/images/ui/transitions/bell0.png" id="5_7rbg0"]
[ext_resource type="Texture2D" uid="uid://blvwd2nk3x3go" path="res://assets/images/ui/arrow.png" id="5_14j0e"]
[ext_resource type="Texture2D" uid="uid://dqdfjx7jj56ii" path="res://assets/images/ui/transitions/bell1.png" id="6_itv5l"]
[ext_resource type="Texture2D" uid="uid://b4sehpse6a35m" path="res://assets/images/ui/transitions/elevator0.png" id="7_w7gos"]
[ext_resource type="Texture2D" uid="uid://cg4s4o4vbdqyc" path="res://assets/images/ui/transitions/elevator1.png" id="8_c32o5"]
[ext_resource type="Texture2D" uid="uid://cyl5tq8jp5j0t" path="res://assets/images/ui/transitions/gumball0.png" id="9_1e3ht"]
[ext_resource type="Texture2D" uid="uid://bkbjihpsh2jer" path="res://assets/images/ui/transitions/gumball1.png" id="10_jwgm7"]
[ext_resource type="Texture2D" uid="uid://b3tp13r2ykpby" path="res://assets/images/ui/transitions/journal0.png" id="11_4pe1s"]
[ext_resource type="Texture2D" uid="uid://qhintyosqus" path="res://assets/images/ui/transitions/journal1.png" id="12_yt3im"]
[ext_resource type="Texture2D" uid="uid://1wa4musg8sh5" path="res://assets/images/ui/transitions/market0.png" id="13_cxpy7"]
[ext_resource type="Texture2D" uid="uid://dten384haeri1" path="res://assets/images/ui/transitions/market1.png" id="14_n7x6n"]
[ext_resource type="Texture2D" uid="uid://kpdgjt7sf3f1" path="res://assets/images/ui/transitions/storage0.png" id="15_sbkq4"]
[ext_resource type="Texture2D" uid="uid://ba21ncyajao5t" path="res://assets/images/ui/transitions/storage1.png" id="16_gt7hx"]
[ext_resource type="Texture2D" uid="uid://bckpy37xwgin2" path="res://assets/images/ui/theTutorialLogo.png" id="17_yt447"]
[ext_resource type="Texture2D" uid="uid://cdi4tcc76faq8" path="res://assets/images/areas/melanies/items/floppydisk.png" id="18_46tk2"]
[ext_resource type="AudioStream" uid="uid://d4nxr0v17co87" path="res://assets/sounds/click.ogg" id="22_d8i4e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f557w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8d78n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o6ry8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gbc57"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hwhu5"]

[sub_resource type="Gradient" id="Gradient_2dxcp"]
colors = PackedColorArray(0.520269, 1.49807e-06, 3.36915e-07, 0, 1, 0, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6nkf3"]
gradient = SubResource("Gradient_2dxcp")

[sub_resource type="Animation" id="Animation_4bxwk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1152)]
}

[sub_resource type="Animation" id="Animation_p5fj6"]
resource_name = "open"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2.03333, 3),
"transitions": PackedFloat32Array(0.307786, 1, 3.36358, 1),
"update": 0,
"values": [Vector2(0, 1152), Vector2(0, 0), Vector2(0, 0), Vector2(0, -1152)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"moveCam"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y6pyl"]
_data = {
"RESET": SubResource("Animation_4bxwk"),
"open": SubResource("Animation_p5fj6")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nihfc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lasfl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_125if"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hsrdf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ghg6u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rgj0f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dom0i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gpieb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l30mx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_18q00"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hs43s"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3tode"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_7rbg0")
}, {
"duration": 1.0,
"texture": ExtResource("6_itv5l")
}],
"loop": true,
"name": &"bell",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_w7gos")
}, {
"duration": 1.0,
"texture": ExtResource("8_c32o5")
}],
"loop": true,
"name": &"elevator",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_1e3ht")
}, {
"duration": 1.0,
"texture": ExtResource("10_jwgm7")
}],
"loop": true,
"name": &"gumballMachine",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_4pe1s")
}, {
"duration": 1.0,
"texture": ExtResource("12_yt3im")
}],
"loop": true,
"name": &"journal",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_cxpy7")
}, {
"duration": 1.0,
"texture": ExtResource("14_n7x6n")
}],
"loop": true,
"name": &"market",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_sbkq4")
}, {
"duration": 1.0,
"texture": ExtResource("16_gt7hx")
}],
"loop": true,
"name": &"storage",
"speed": 4.0
}]

[sub_resource type="Animation" id="Animation_tjk11"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cover:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("logo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hvvfl"]
resource_name = "intro"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cover:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("logo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 1, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"killIntro"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_46cp3"]
_data = {
"RESET": SubResource("Animation_tjk11"),
"intro": SubResource("Animation_hvvfl")
}

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_oa3ri")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2(500, 325)
scale = Vector2(1.15, 1.15)
transform = Transform2D(1.15, 0, 0, 1.15, 500, 325)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(150.435, 36.5217)
motion_mirroring = Vector2(1152, 800)

[node name="background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(-36.5218, 48.6956)
texture = ExtResource("1_r6irf")

[node name="fade" type="Sprite2D" parent="."]
position = Vector2(577, 324)
texture = ExtResource("3_sor34")

[node name="vlc" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("3_kijts")

[node name="Label" type="Label" parent="vlc"]
modulate = Color(1, 1, 1, 0)
offset_left = -133.0
offset_top = 96.0
offset_right = 137.0
offset_bottom = 119.0
text = "(you have to press the play button)"

[node name="Label2" type="Label" parent="vlc"]
modulate = Color(1, 1, 1, 0)
offset_left = -443.0
offset_top = 104.0
offset_right = -317.0
offset_bottom = 127.0
text = "yknow, this one."

[node name="arrow" type="Sprite2D" parent="vlc/Label2"]
position = Vector2(449, -102)
texture = ExtResource("5_14j0e")

[node name="Timer" type="Timer" parent="vlc"]
wait_time = 15.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="vlc"]
wait_time = 25.0
one_shot = true
autostart = true

[node name="X" type="Button" parent="vlc"]
offset_left = -573.0
offset_top = 267.0
offset_right = -509.0
offset_bottom = 329.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_f557w")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_8d78n")
theme_override_styles/hover = SubResource("StyleBoxEmpty_o6ry8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gbc57")
theme_override_styles/normal = SubResource("StyleBoxEmpty_hwhu5")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="leftMove" type="TextureRect" parent="Camera2D"]
offset_left = -576.0
offset_top = -324.0
offset_right = -398.0
offset_bottom = 324.0
mouse_filter = 2
texture = SubResource("GradientTexture2D_6nkf3")

[node name="rightMove" type="TextureRect" parent="Camera2D"]
offset_left = 398.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
mouse_filter = 2
texture = SubResource("GradientTexture2D_6nkf3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]
libraries = {
"": SubResource("AnimationLibrary_y6pyl")
}

[node name="storgImg" type="Sprite2D" parent="Camera2D"]
visible = false
position = Vector2(486.5, 239.5)
texture = ExtResource("3_4fseq")

[node name="storg" type="Button" parent="Camera2D"]
visible = false
offset_left = 417.0
offset_top = 166.0
offset_right = 561.0
offset_bottom = 316.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_nihfc")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_lasfl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_125if")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_hsrdf")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ghg6u")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_rgj0f")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dom0i")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_gpieb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_l30mx")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_18q00")
theme_override_styles/normal = SubResource("StyleBoxEmpty_hs43s")

[node name="bg" type="Sprite2D" parent="Camera2D"]
z_index = 4096
position = Vector2(0, 1152)
texture = ExtResource("4_f6wap")

[node name="icon" type="AnimatedSprite2D" parent="Camera2D/bg"]
sprite_frames = SubResource("SpriteFrames_3tode")
animation = &"market"

[node name="intro" type="TextureRect" parent="Camera2D"]
self_modulate = Color(1, 1, 1, 0)
z_index = 4096
mouse_filter = 2

[node name="cover" type="ColorRect" parent="Camera2D/intro"]
layout_mode = 0
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
color = Color(0.121569, 0.0470588, 0, 1)

[node name="logo" type="Sprite2D" parent="Camera2D/intro"]
position = Vector2(23, 0)
texture = ExtResource("17_yt447")

[node name="anim" type="AnimationPlayer" parent="Camera2D/intro"]
libraries = {
"": SubResource("AnimationLibrary_46cp3")
}
autoplay = "intro"

[node name="kiwami" type="ColorRect" parent="Camera2D"]
visible = false
modulate = Color(1, 1, 1, 0.384314)
z_index = 4096
offset_left = -590.0
offset_top = -340.0
offset_right = 589.0
offset_bottom = 335.0
mouse_filter = 2
color = Color(0, 1, 0, 1)

[node name="autoPoop" type="Sprite2D" parent="Camera2D"]
visible = false
z_index = 4096
position = Vector2(-517, 260)
scale = Vector2(0.8, 0.8)
texture = ExtResource("18_46tk2")

[node name="poopTimer" type="Timer" parent="Camera2D/autoPoop"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_d8i4e")

[connection signal="timeout" from="vlc/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="vlc/Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="pressed" from="vlc/X" to="." method="begin"]
